# krapi

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  main.cpp
src/BlockchainModels/: Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  Transaction.cpp  Transaction.h
src/Event/: CMakeLists.txt  Event.h  EventLoop.h  EventQueue.h  PromiseStore.h
src/Miner/: CMakeLists.txt  Miner.cpp  Miner.h
src/Models/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  CMakeLists.txt  Transaction.cpp  Transaction.h
src/Models/Message/: AckMessage.h  AckMsg.h  CMakeLists.txt  CreateTxMessage.h  CreateTxMsg.h  DiscoverNodesMsg.h  DiscoverTxPools.h  DiscoverTxPoolsMsg.h  JsonToMessageConverter.h  Message.h  MessageBase.cpp  MessageBase.h
src/Models/Response/: CMakeLists.txt  ErrorRsp.h  JsonToResponseConverter.h  NodeDiscoveryRsp.h  Response.h  ResponseBase.cpp  ResponseBase.h  TxDiscoveryRsp.h  TxPoolDiscoveryRsp.h
src/Models/Transaction/: JsonToTxConverter.h  RegisterCandidateTx.h  RegisterVoterTx.h  Transaction.h  TransactionBase.cpp  TransactionBase.h  VoteTx.h
src/NodeManager/: CMakeLists.txt  KrapiRTCDataChannel.cpp  KrapiRTCDataChannel.h  NodeManager.cpp  NodeManager.h  PeerConnection.cpp  PeerConnection.h
src/PeerManager/: CMakeLists.txt  PeerConnection.cpp  PeerConnection.h  PeerManager.cpp  PeerManager.h  RetryHandler.cpp  RetryHandler.h
src/PeerMap/: CMakeLists.txt  KrapiRTCDataChannel.h  PeerMap.cpp  PeerMap.h
src/Servers/ClientSimulator/: CMakeLists.txt  main.cpp
src/Servers/ControlNode/: CMakeLists.txt  main.cpp
src/Servers/Discovery/: CMakeLists.txt  main.cpp
src/Servers/Identity/: CMakeLists.txt  main.cpp
src/Servers/LightNode/: CMakeLists.txt  LightNodeManager.cpp  LightNodeManager.h  Wallet.cpp  Wallet.h  main.cpp
src/Servers/Node/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpServer.h  IdentityManager.h  MessageQueue.h  Miner.h  NetworkConnection.cpp  NetworkConnection.h  NetworkManager.cpp  NetworkManager.h  NetworkMessageHandeler.h  NetworkNode.cpp  NetworkNode.h  NodeHttpClient.cpp  NodeHttpClient.h  NodeHttpMessage.h  NodeHttpServer.cpp  NodeHttpServer.h  NodeIdentityManager.cpp  NodeIdentityManager.h  NodeManager.cpp  NodeManager.h  NodeMessage.h  NodeResponse.h  NodeServer.cpp  NodeServer.h  NodeWebSocketServer.cpp  NodeWebSocketServer.h  P2PNodeManager.cpp  P2PNodeManager.h  PeerMap.cpp  PeerMap.h  PeerMessage.h  Server.cpp  Server.h  ServerMessageHandeler.h  SpentTransactionsStore.h  Validator.h  WebSocketServer.h  (+1 more)
src/Servers/Node/Blockchain/: Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  Blockchain.cpp  Blockchain.h  BlockchainManager.cpp  BlockchainManager.h  Miner.cpp  Miner.h  Transaction.h  TransactionPool.cpp  TransactionPool.h
src/Servers/Node/Http/: HttpClient.cpp  HttpClient.h  HttpMessage.h  HttpServer.cpp  HttpServer.h
src/Servers/Node/Managers/: IdentityManager.cpp  IdentityManager.h  NetworkConnectionManager.cpp  NetworkConnectionManager.h  NodeManager.cpp  NodeManager.h
src/Servers/Node/Miner/: Miner.h
src/Servers/Node/Models/: NodeMessage.h
src/Servers/Node/TransactionPool/: TransactionPool.cpp  TransactionPool.h  TransactionPoolManager.cpp  TransactionPoolManager.h
src/Servers/Node/Utils/: MessageQueue.h  Miner.h  TransactionQueue.h
src/Servers/Node/WebSocket/: WebSocketServer.cpp  WebSocketServer.h
src/Servers/ObserverNode/: CMakeLists.txt  main.cpp
src/Servers/ServerUtils/: CMakeLists.txt  InternalMessageQueue.h  ParsingUtils.h
src/Servers/Signaling/: CMakeLists.txt  SignalingServer.cpp  SignalingServer.h  SignalingSocket.cpp  SignalingSocket.h  main.cpp
src/Servers/SignalingClient/: CMakeLists.txt  SignalingClient.cpp  SignalingClient.h
src/Servers/TransactionPool/: CMakeLists.txt  main.cpp
src/SharedModels/: CMakeLists.txt  Concepts.h  DBInterface.h  InternalMessage.h  InternalNotification.h  Message.h  PeerConfiguration.h  PeerMessage.h  PeerState.h  PeerType.h  Response.h  SignalingMessage.h  Transaction.h  ValidationState.h
src/SharedModels/Content/: BlockHeadersResponseContent.h  BlocksResponseContent.h  PoolResponseContent.h  SetTransactionStatusContent.h  SyncBlockchainResponseContent.h
src/TransactionPool/: CMakeLists.txt  TransactionPool.cpp  TransactionPool.h
src/Utils/: Assert.h  AsyncQueue.h  Box.h  CMakeLists.txt  ErrorOr.h  Helpers.h  NotNull.h  Overload.h
test/: CMakeLists.txt  test1.cpp
