add_library(
        transaction_pool
        ${CMAKE_CURRENT_LIST_DIR}/TransactionPool.cpp
        ${CMAKE_CURRENT_LIST_DIR}/TransactionPool.h
)
target_link_libraries(
        transaction_pool PRIVATE
        concurrencpp
        datachannel
        nlohmann_json
        stduuid
        eventpp
        cryptopp
        spdlog
        leveldb
        readerwriterqueue
        blockchain_models
        shared_models
)