project(signaling_client)
cmake_minimum_required(VERSION 3.23.2)
include_directories(${CMAKE_CURRENT_LIST_DIR})
add_library(
        signaling_client
        ${CMAKE_CURRENT_LIST_DIR}/SignalingClient.cpp
        ${CMAKE_CURRENT_LIST_DIR}/SignalingClient.h
)
target_link_libraries(
        signaling_client
        PRIVATE
        datachannel
        nlohmann_json
        spdlog
        stduuid
        concurrencpp
        eventpp
        shared_models
)